<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/seBlue"/>

   <Gallery
       android:id="@+id/imgGallery"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"/>

       
	<TextView
	      android:id="@+id/txtUPSModel"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:textStyle="bold"/>
	
     <ScrollView
        android:layout_width="match_parent"
       	android:layout_height="wrap_content" > 	
		    <TableLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" 
	        android:isScrollContainer="true">
			
	            <TableRow
	            android:id="@+id/rowDetails1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >

				    <TextView
        				android:id="@+id/txtPriceLabel"
        				android:layout_width="wrap_content"
        				android:layout_height="wrap_content"
        				android:text="@string/price"/>
				    <TextView
        				android:id="@+id/txtUPSPrice"
        				android:layout_width="wrap_content"
        				android:layout_height="wrap_content"
        				android:textColor="@color/seRed"/>
	            </TableRow>
	            
	            <TableRow
	            android:id="@+id/rowDetails2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
				    <TextView
        				android:id="@+id/txtRuntimeLabel"
        				android:layout_width="wrap_content"
        				android:layout_height="wrap_content"
        				android:text="@string/runtime"/>
				    <TextView
        				android:id="@+id/txtUPSRuntime"
        				android:layout_width="wrap_content"
        				android:layout_height="wrap_content"/>
	            </TableRow>
	            
	            <TableRow
	            android:id="@+id/rowDetails3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
				    <TextView
        				android:id="@+id/txtSkuLabel"
        				android:layout_width="wrap_content"
        				android:layout_height="wrap_content"
        				android:text="@string/part_number"/>
				    <TextView
        				android:id="@+id/txtUPSSku"
        				android:layout_width="wrap_content"
        				android:layout_height="wrap_content"/>
	            </TableRow>
	            
    	</TableLayout>
    
    </ScrollView>
    
    <ListView
        android:id="@+id/listButtons"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:listSelector="@drawable/se_list_item">
    </ListView> 
    
    <LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
		    
    	<ImageButton
	        android:id="@+id/btnAddToCart"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/add_to_cart"
	        android:contentDescription="@string/add_to_cart"
	        android:background="@drawable/se_add_to_cart_button"
	        />
    	
    </LinearLayout>
    
    <TextView
        android:id="@+id/txtFeaturesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/features"
        android:textStyle="bold"/>
     
    <ListView
        android:id="@+id/listFeatures"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:listSelector="@drawable/se_list_item">
    </ListView>

</LinearLayout>